src/objects/CRM_Error_Event_In__e.object
<CustomObject>
    <fields>
        <fullName>code__c</fullName>
        <label>code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>entityType__c</fullName>
        <label>entityType</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eventDate__c</fullName>
        <label>eventDate</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eventSource__c</fullName>
        <label>eventSource</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>key__c</fullName>
        <label>key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>message__c</fullName>
        <label>message</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>payload__c</fullName>
        <label>payload</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <label>CRM Error Event In</label>
    <pluralLabel>CRM Error Events In</pluralLabel>
</CustomObject>